--- a/TestaPerceptualPhenomenon/Test+a+Perceptual+Phenomenon+zh.html
+++ b/TestaPerceptualPhenomenon/Test+a+Perceptual+Phenomenon+zh.html
@@ -13146,15 +13146,15 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>假设：</strong></p>
-<p>$A$: word与color匹配时所用的回答时间</p>
-<p>$B$: word与color不匹配时所用的回答时间</p>
-<p>$\mu_0$: $A$的平均数</p>
-<p>$\mu_1$: $B$的平均数</p>
-<p>$H_0$: $\mu_0$与$\mu_1$之间不存在显著性差别</p>
-<p>$H_1$: $\mu_0$与$\mu_1$之间存在显著性差别</p>
+<p>$\mu_0$: 测试对象在Congruent测试时反应时间的总体均值</p>
+<p>$\mu_1$: 测试对象在Incongruent测试时反应时间总体均值</p>
+<p>$\mu$: $\mu_1 - \mu_0$</p>
+<p>$H_0$: $\mu = 0$</p>
+<p>$H_1$: $\mu &gt; 0$</p>
 <p><strong>分析：</strong></p>
-<p>假设数据符合正态性假定与方差齐性假定，可以进行参数检验。（此处在后续处理中的正态性检验与方差齐性检验中体现）</p>
-<p>根据初步观察，有两组数据，每组数据数据量为24，属于小样本，因此执行T检验，确认在显著性水平$\alpha = 0.05$时是否接受$H_0$</p>
+<p>根据初步观察，有两组数据，每组数据数据量为24，且数据来源是对同一群人，进行两次不同的实验，属于相关样本。</p>
+<p>假设数据符合正态性假定与方差齐性假定，则可以进行参数检验。（后续处理中有QQ图进行正态性检验部分，由于样本是相关样本，因此省略方差齐性检验）</p>
+<p>根据上述条件以及备择假设，执行单侧配对T检验，确认在显著性水平$\alpha = 0.05$时是否接受$H_0$。</p>
 
 </div>
 </div>
@@ -13170,7 +13170,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># 在这里执行你的分析</span>
@@ -13178,6 +13178,7 @@ div#notebook {
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">scipy.stats</span> <span class="k">as</span> <span class="nn">stats</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
+<span class="kn">import</span> <span class="nn">math</span>
 
 <span class="o">%</span> <span class="n">matplotlib</span> <span class="n">inline</span>
 
@@ -13258,7 +13259,7 @@ std of Incongruent is 4.696055
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># 在这里创建可视化图表</span>
@@ -13282,9 +13283,9 @@ std of Incongruent is 4.696055
 
 <span class="c1"># homogeneity test of variance</span>
 <span class="c1"># We use levene test</span>
-<span class="n">args</span> <span class="o">=</span> <span class="p">[</span><span class="n">data_A</span><span class="p">,</span> <span class="n">data_B</span><span class="p">]</span>
-<span class="n">w</span><span class="p">,</span> <span class="n">p</span> <span class="o">=</span> <span class="n">stats</span><span class="o">.</span><span class="n">levene</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">)</span>
-<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;levene-test between two data is </span><span class="si">%f</span><span class="s2"> &quot;</span> <span class="o">%</span> <span class="n">p</span><span class="p">)</span>
+<span class="c1">#args = [data_A, data_B]</span>
+<span class="c1">#w, p = stats.levene(*args)</span>
+<span class="c1">#print(&quot;levene-test between two data is %f &quot; % p)</span>
 </pre></div>
 
     </div>
@@ -13302,7 +13303,6 @@ std of Incongruent is 4.696055
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Correlation between Congruent and Incongruent is 0.351820 
-levene-test between two data is 0.619284 
 </pre>
 </div>
 </div>
@@ -13347,12 +13347,32 @@ levene-test between two data is 0.619284
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[27]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># 在这里执行统计检验</span>
 <span class="c1"># Now, we&#39;ve done normally distribution test and homogeneity test of variance, we could do ttest</span>
-<span class="n">stats</span><span class="o">.</span><span class="n">ttest_ind</span><span class="p">(</span><span class="n">data_A</span><span class="p">,</span> <span class="n">data_B</span><span class="p">)</span>
+<span class="n">data</span> <span class="o">=</span> <span class="n">data_B</span> <span class="o">-</span> <span class="n">data_A</span>
+<span class="n">n</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">data</span><span class="p">)</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">n</span> <span class="o">-</span> <span class="mi">1</span>
+<span class="n">alpha</span> <span class="o">=</span> <span class="mf">0.05</span>
+
+<span class="n">d_mu</span> <span class="o">=</span> <span class="n">data</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span>
+<span class="n">Std</span> <span class="o">=</span> <span class="n">data</span><span class="o">.</span><span class="n">std</span><span class="p">()</span>
+<span class="n">Ste</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="n">math</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">n</span><span class="p">)</span><span class="o">*</span><span class="n">Std</span>
+<span class="n">t_value</span> <span class="o">=</span> <span class="n">d_mu</span><span class="o">/</span><span class="n">math</span><span class="o">.</span><span class="n">sqrt</span><span class="p">(</span><span class="n">Std</span><span class="o">**</span><span class="mi">2</span><span class="o">/</span><span class="n">n</span><span class="p">)</span>
+<span class="c1"># Check table to find t_value of significance alpha</span>
+<span class="n">t_value_alpha</span> <span class="o">=</span> <span class="mf">1.714</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Significance value is set as: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">alpha</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Mean of differences is: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">d_mu</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Standard deviation of differences is: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">Std</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Standard error of differences is: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">Ste</span><span class="p">)</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Degree of freedom is: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">df</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;t value is: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">t_value</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;t value when p=0.05 is: </span><span class="si">%f</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">t_value_alpha</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s2">&quot;P value t_value &gt; t_value_alpha, which means p value smaller than 0.05&quot;</span><span class="p">)</span>
 </pre></div>
 
     </div>
@@ -13365,15 +13385,20 @@ levene-test between two data is 0.619284
 
 <div class="output_area">
 
-    <div class="prompt output_prompt">Out[3]:</div>
+    <div class="prompt"></div>
 
 
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>Ttest_indResult(statistic=-6.5322505539032285, pvalue=4.5949489622951854e-08)</pre>
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Significance value is set as: 0.050000
+Mean of differences is: 7.964792
+Standard deviation of differences is: 4.864827
+Standard error of differences is: 0.993029
+Degree of freedom is: 23.000000
+t value is: 8.020707
+t value when p=0.05 is: 1.714000
+P value t_value &gt; t_value_alpha, which means p value smaller than 0.05
+</pre>
 </div>
-
 </div>
 
 </div>
@@ -13385,7 +13410,8 @@ levene-test between two data is 0.619284
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>--答案写这里--</p>
 <p><strong>结论：</strong></p>
-<p>我们使用了双总体独立样本$T$检验，从$T$检验我们可以看出$t$值为$-6.5323$，$p$值为$4.5949e-08$，因此在置信水平$0.05$的情况下，我们拒绝原假设$H_0$。因此认为$\mu_0$与$\mu_1$的差别具有显著性。即Congruent与Incongruent测验中测试者反应时间均值存在差别。</p>
+<p>我们使用了单侧配对配对$T$检验，从检验结果我们可以看出自由度为23，$t$值为$8.020707$,由于在自由度为23时查表表明p值小于0.0005，可以选择查找$p=0.05$，自由度23时的t值，为1.714，因此在显著性水平$0.05$的情况下，我们拒绝原假设$H_0$。</p>
+<p>由上述分析，认为备择假设$\mu&gt;0$成立。</p>
 
 </div>
 </div>
